--- a/ArcheryGame/ArcheryGame/ArcheryGame.csproj
+++ b/ArcheryGame/ArcheryGame/ArcheryGame.csproj
@@ -38,9 +38,14 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Archer.cs" />
+    <Compile Include="Camera.cs" />
+    <Compile Include="DrawableGameObject.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="GameObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
