--- a/ArcheryGame/ArcheryGame/ArcheryGame.csproj
+++ b/ArcheryGame/ArcheryGame/ArcheryGame.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Archer.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="Floor.cs" />
     <Compile Include="DrawableGameObject.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GameObject.cs" />
