--- a/ArcheryGame/ArcheryGame/ArcheryGame.csproj
+++ b/ArcheryGame/ArcheryGame/ArcheryGame.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Archer.cs" />
+    <Compile Include="Arrow.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Floor.cs" />
     <Compile Include="DrawableGameObject.cs" />
