--- a/ArcheryGame/ArcheryGame/ArcheryGame.csproj
+++ b/ArcheryGame/ArcheryGame/ArcheryGame.csproj
@@ -41,11 +41,11 @@
     <Compile Include="GameObjects\Archer.cs" />
     <Compile Include="GameObjects\Arrow.cs" />
     <Compile Include="GameObjects\Camera.cs" />
-    <Compile Include="GameObjects\Floor.cs" />
     <Compile Include="GameObjects\DrawableGameObject.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
     <Compile Include="GameObjects\Skydome.cs" />
+    <Compile Include="GameObjects\Wall.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services.cs" />
